--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^0.21.1",
     "cli": "^1.0.1",
     "deprecated-react-native-prop-types": "^4.0.0",
-    "expo": "^46.0.0",
+    "expo": "~46.0.19",
     "expo-app-auth": "~11.1.0",
     "expo-auth-session": "~3.7.4",
     "expo-blur": "~11.2.0",
@@ -30,12 +30,14 @@
     "expo-facebook": "~12.2.0",
     "expo-file-system": "^14.0.0",
     "expo-google-app-auth": "~8.3.0",
+    "expo-haptics": "~11.3.0",
     "expo-image-manipulator": "~10.4.0",
     "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-location": "~14.3.0",
     "expo-media-library": "~14.2.0",
-    "expo-modules-core": "~0.11.10",
+    "expo-modules-autolinking": "^1.1.2",
+    "expo-modules-core": "^1.2.6",
     "expo-notifications": "~0.16.1",
     "expo-permissions": "~13.2.0",
     "expo-random": "~12.3.0",
@@ -51,12 +53,13 @@
     "querybase": "^0.6.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.69.7",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dimension": "^1.0.6",
     "react-native-elements": "^3.4.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-gifted-chat": "^2.0.1",
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-gradient-buttons": "^2.0.2",
@@ -98,6 +101,13 @@
     "stream-chat": "^3.13.1",
     "stream-chat-expo": "^3.7.2",
     "toggle-switch-react-native": "^3.2.0"
+  },
+  "expo": {
+    "autolinking": {
+      "exclude": [
+        "expo-modules-autolinking"
+      ]
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
